WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307913
[AutoFill Debugging] Interactions over disabled/readonly controls should fail with a descriptive error
https://bugs.webkit.org/show_bug.cgi?id=307913
Summary
[AutoFill Debugging] Interactions over disabled/readonly controls should fail...
Wenson Hsieh
Reported
2026-02-14 14:21:59 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-14 14:22:05 PST
<
rdar://problem/170399636
>
Wenson Hsieh
Comment 2
2026-02-14 14:38:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58731
EWS
Comment 3
2026-02-14 18:08:00 PST
Committed
307597@main
(1ef0aecdab99): <
https://commits.webkit.org/307597@main
> Reviewed commits have been landed. Closing PR #58731 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug