[AutoFill Debugging] Interactions over disabled/readonly controls should fail with a descriptive error https://bugs.webkit.org/show_bug.cgi?id=307913 rdar://170399636

Reviewed by Abrar Rahman Protyasha.

Make several interaction types fail in cases where the target node is either readonly (in the case
of text input) or disabled (in the case of clicks and selecting menu items).

* LayoutTests/fast/text-extraction/debug-text-extraction-interactions-expected.txt:
* LayoutTests/fast/text-extraction/debug-text-extraction-interactions.html:

Augment an existing layout test to cover these new cases.

* Source/WebCore/page/text-extraction/TextExtraction.cpp:
(WebCore::TextExtraction::shadowHostOrSelfInclusiveParent):
(WebCore::TextExtraction::canBeEdited):
(WebCore::TextExtraction::isInDisabledFormControl):
(WebCore::TextExtraction::dispatchSimulatedClick):
(WebCore::TextExtraction::selectOptionByValue):
(WebCore::TextExtraction::focusAndInsertText):
(WebCore::TextExtraction::handleInteraction):

Canonical link: https://commits.webkit.org/307597@main